<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="51dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/permisosApps" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/instagram" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="576dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="119dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/almacen"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/contactos"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="244dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/camara"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/micrófono"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sms"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Telefono"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ubi"
                android:textAlignment="center"
                android:textSize="27dp" />

            <Switch
                android:id="@+id/switch7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/vacio" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>